User swaggerdoc set up
